# apairo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
apairo/: __init__.py  cli.py
apairo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apairo/core/: __init__.py  abstract_dataset.py  abstract_loader.py  cached_dataset.py  channel_view.py  config.py  configurable_dataset.py  filtered_view.py  interpolator.py  keys.py  layout.py  naming.py  preprocessor.py  profiled_dataset.py  root_sequence.py  sample.py  sequence_view.py  synchronized_view.py  synchronous_dataset.py  transform.py  window_view.py
apairo/core/utils/: exceptions.py  typing.py
apairo/dataset/: __init__.py  concat.py  concat_dataset.py  export.py  kitti.py  stream.py  tartan_kitti.py  torch_wrappers.py  zip.py
apairo/dataset/async_layout/: dataset.py
apairo/dataset/goose/: dataset.py
apairo/dataset/kitti/: __init__.py  dataset.py
apairo/dataset/mnt/: __init__.py  dataset.py  layout.py
apairo/dataset/profiles/: goose.yaml  rellis.yaml  semantic_kitti.yaml
apairo/dataset/raw/: __init__.py  dataset.py
apairo/dataset/semantic_kitti/: dataset.py
apairo/dataset/tartan_kitti/: dataset.py  profile.yaml
apairo/loader/: __init__.py  bin_loader.py  img_loader.py  npy_loader.py  npys_loader.py  pt_loader.py  tar_loader.py  txt_loader.py  zarr_loader.py
apairo/preprocess/: __init__.py  runner.py
apairo/sampler/: latest_sync_sampler.py  uniform_sampler.py
apairo/utils/: __init__.py  files.py  naming.py  resample.py  timestamps.py  types.py  utils.py
apairo/writer/: __init__.py  bin_writer.py  channel_writer.py  npy_writer.py  tar_writer.py  zarr_writer.py
benchmarks/: README.md  baseline.py  bench.py  headtohead.py  soak.py  synth.py
docs/: async-datasets.md  cli.md  combining.md  concepts.md  design.md  filter.md  frames.md  index.md  installation.md  preprocessing.md  quickstart.md  transform.md  views.md
docs/api/: reference.md
docs/datasets/: adding-a-dataset.md  apairo-schema.md  bring-your-own-dataset.md  index.md  yaml-profiles.md
docs/examples/: cross_dataset_concat.md  join_cached_prior.md  sequence_kfold.md
docs/stylesheets/: extra.css
examples/: cross_dataset_concat.py  goose_traversability.py  join_cached_prior.py  join_persisted_prior.py  mnt_basic.py  mnt_traversability.py  rellis_camera_sync.py  rellis_traversability.py  sequence_kfold.py  tartan_frame_transform.py  tartan_kitti_basic.py  tartan_kitti_preprocess.py  tartan_synchronize.py  training_pipeline_rellis.py  transforms_basic.py
test/: conftest.py  test_examples.py  test_public_api.py  test_sequence_view.py  test_utils.py
test/assets/: README.md  extract_mini_datasets.py
test/assets/mini_rellis/: pt_test.lst  pt_train.lst  pt_val.lst
test/assets/mini_rellis/Rellis-3D/00000/: poses.txt
test/assets/mini_rellis/Rellis-3D/00000/os1_cloud_node_semantickitti_label_id/: 000000.label  000001.label  000002.label  000003.label  000004.label
test/assets/mini_rellis/Rellis-3D/00001/: poses.txt
test/assets/mini_rellis/Rellis-3D/00001/os1_cloud_node_semantickitti_label_id/: 000000.label  000001.label  000002.label  000003.label  000004.label
test/assets/mini_tartan/figure_8/cmd/: timestamps.txt  twist.npy
test/assets/mini_tartan/figure_8/multisense_imu/: imu.npy  timestamps.txt
test/assets/mini_tartan/figure_8/velodyne_0/: 000000.npy  000000_intensity.npy  000001.npy  000001_intensity.npy  000002.npy  000002_intensity.npy  000003.npy  000003_intensity.npy  000004.npy  000004_intensity.npy  000005.npy  000005_intensity.npy  000006.npy  000006_intensity.npy  000007.npy  000007_intensity.npy  timestamps.txt
test/cli/: test_cli.py
test/core/: test_abstract_dataset.py  test_async_derived.py  test_calibration.py  test_filter_sequences.py  test_frame_info.py  test_layout.py  test_naming.py  test_preprocess_reuse.py  test_preprocessor.py  test_sample.py  test_schema.py  test_select_cache.py  test_synchronized_view.py  test_synchronous_dataset.py  test_window_view.py
test/dataset/: test_clock_regressions.py  test_colocated_npy.py  test_concat.py  test_export.py  test_filename_key.py  test_frame_clock.py  test_goose.py  test_mnt.py  test_profiled_dataset.py  test_raw_dataset.py  test_rellis.py  test_semantic_kitti.py  test_smoke_real_data.py  test_split.py  test_stream.py  test_tartan_kitti.py  test_torch_tk_iter_dataset.py  test_zip.py
test/loader/: test_derived_loaders.py  test_img_loader.py  test_npy_loader.py  test_npys_loader.py
test/utils/: __init__.py  create_mock_dataset.py  create_mock_loader.py  create_raw_data.py  test_resample.py
test/writer/: test_channel_writer.py  test_writers.py
