[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apairo"
version = "0.1.0"
description = "Extensible framework to load robotics datasets"
readme = "README.md"
authors = [
  { name = "Augustin Bresset", email = "augustin.bresset@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["lidar", "robotics", "dataset", "point-cloud", "traversability"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/apairo-robotics/apairo"
Repository = "https://github.com/apairo-robotics/apairo"
Issues = "https://github.com/apairo-robotics/apairo/issues"

[project.optional-dependencies]
torch = ["torch"]
vision = ["Pillow"]
dev = ["pytest", "matplotlib", "Pillow"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--ignore=test/sampler"

[tool.setuptools.packages.find]
where = ["."]
include = ["apairo*"]

[tool.setuptools.package-data]
apairo = ["dataset/**/*.yaml", "core/config/*.yaml"]
