[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apairo"
version = "0.5.0"
description = "Extensible framework to load robotics datasets"
readme = "README.md"
authors = [
  { name = "Augustin Bresset", email = "augustin.bresset@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["lidar", "robotics", "dataset", "point-cloud", "traversability"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.26",
    "PyYAML>=6.0",
]

[project.scripts]
apairo = "apairo.cli:main"

[project.urls]
Homepage = "https://github.com/apairo-robotics/apairo"
Repository = "https://github.com/apairo-robotics/apairo"
Issues = "https://github.com/apairo-robotics/apairo/issues"

[project.optional-dependencies]
vision = ["Pillow"]
zarr = ["zarr>=3.0"]
bench = ["matplotlib"]
dev = [
    "pytest",
    "pytest-cov",
    "Pillow",
    "zarr>=3.0",
    "ruff==0.15.20",
    "mypy",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) plus import sorting (I), modern syntax (UP) and
# bugbear's likely-bug patterns (B).
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
# Not a CI gate yet: `make typecheck` tracks the baseline (see CONTRIBUTING).
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apairo*"]

[tool.setuptools.package-data]
apairo = ["dataset/**/*.yaml", "core/config/*.yaml", "py.typed"]
